SSCSCI-2461 Notification to Appellant